--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-calendar": "^4.8.0",
     "react-chartjs-2": "^5.2.0",
     "react-date-picker": "^11.0.0",
+    "react-datepicker": "^7.1.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "swiper": "^11.1.0"
