--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
     "axios": "^1.7.4",
+    "bad-words": "^4.0.0",
     "bad-words-next": "^2.3.1",
     "config": "^3.3.12",
     "connect-mongo": "^5.1.0",
