--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "chart.js": "^4.4.3",
     "chartjs-plugin-datalabels": "^2.2.0",
     "date-fns": "^3.6.0",
-    "next": "14.1.4",
+    "next": "^14.2.13",
     "react": "^18",
     "react-calendar": "^4.8.0",
     "react-chartjs-2": "^5.2.0",
@@ -24,7 +24,8 @@
     "react-datepicker": "^7.1.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "swiper": "^11.1.0"
+    "swiper": "^11.1.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/node": "^20",
