--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-datepicker": "^7.1.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-scroll-parallax": "^3.4.5",
     "swiper": "^11.1.0",
     "typewriter-effect": "^2.21.0"
   },
