--- a/package.json
+++ b/package.json
@@ -29,11 +29,7 @@
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.1.4",
-    "typescript": "^5"
+    "eslint-config-next": "14.1.4"
   }
 }
