--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
     "@popperjs/core": "^2.11.8",
+    "ajv": "^8.17.1",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
@@ -29,7 +30,7 @@
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4"
+    "eslint": "^7.23.0",
+    "eslint-config-next": "^15.1.1"
   }
 }
