--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "chart.js": "^4.4.3",
     "chartjs-plugin-datalabels": "^2.2.0",
     "date-fns": "^3.6.0",
-    "next": "^14.2.13",
     "react": "^18",
     "react-calendar": "^4.8.0",
     "react-chartjs-2": "^5.2.0",
@@ -30,7 +29,8 @@
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
-    "eslint": "^7.23.0",
-    "eslint-config-next": "^15.1.1"
+    "eslint": "^7.32.0",
+    "eslint-config-next": "^15.1.2",
+    "next": "^15.1.2"
   }
 }
