--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,12 +1,10 @@
+
 {
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@components/*": ["components/*"],
-      "@/styles/*": ["styles/*"]
+      "@/*": ["./*"]
     }
   },
-  "include": ["**/*.js", "**/*.jsx"],
-  "exclude": ["node_modules"]
+  "include": ["pages", "components"]
 }
-
