added product, inventory dashboard pages

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@geist-ui/react": "^2.2.5",
     "@popperjs/core": "^2.11.8",
     "ajv": "^8.17.1",
     "axios": "^1.6.8",
