--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,7 @@
   "rules": {
     "@next/next/no-page-custom-font": "off",
     "@next/next/no-html-link-for-pages": "off",
-     "@next/next/no-head-import-in-document": "off"
+     "@next/next/no-head-import-in-document": "off",
+     "@next/next/no-duplicate-head": "off"
   }
 }
