--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.10",
     "eslint": "^8.0.0",
     "eslint-config-next": "^15.1.2",
     "next": "^15.1.2"
